<resources>
    <string name="app_name">Commander For EOSIO</string>
    <string name="settings">Settings</string>
    <string name="set_connection">Set connection</string>
    <string name="about">About</string>

    <string name="wallet">Wallet</string>
    <string name="account">account</string>
    <string name="transfer">Transfer</string>
    <string name="push">Push</string>
    <string name="get_table">Get table</string>

    <string name="nodeos_ip">nodeos host address</string>
    <string name="nodeos_port">Port</string>
    <string name="connect">Connect</string>
    <string name="desc_for_connect_result">EOS network information will be displayed here when you connect.</string>

    <string name="app_title_with_ver_fmt">EOS Commander %s for developers\n\nby</string>
    <string name="player_one">PlayerOne</string>

    <string name="info_player_one_web">Web\nhttps://playerone.id</string>
    <string name="info_player_one_github">Github\nhttps://github.com/playerone-id</string>
    <string name="info_player_one_telegram">Telegram\nhttps://t.me/playerone_id</string>
    <string name="info_player_one_facebook">Facebook\nhttps://www.facebook.com/playerone.id</string>

    <string name="input_account">Input account</string>
    <string name="account_info_title_fmt">%s: %s</string>
    <string name="create_account">Create account</string>
    <string name="creator_name">Creator name</string>
    <string name="new_account_name">New account name</string>
    <string name="owner_public_key">Owner public key</string>
    <string name="active_public_key">Active public key</string>
    <string name="create">Create</string>
    <string name="get_transactions">Get transactions</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="send">Send</string>
    <string name="create_wallet">Create wallet</string>
    <string name="create_wallet_default">Create default wallet\nand import key of sample eosio</string>
    <string name="new_wallet_name">New wallet name</string>
    <string name="import_key">Import key</string>
    <string name="input_private_key">Input private key</string>
    <string name="import_label">Import</string>
    <string name="view_wallet_keys">Keys in wallet</string>
    <string name="unlock_wallet">Unlock wallet</string>
    <string name="input_wallet_password">Input wallet password</string>
    <string name="unlock">Unlock</string>
    <string name="command">Command</string>
    <string name="import_json">Import json</string>
    <string name="import_msg_json">Import message json file and edit.</string>
    <string name="push_message_hint">Contract message\n(Create message from ui or json file.)</string>
    <string name="view_keys_unlocked_wallet">Keys in wallets unlocked</string>
    <string name="wallet_list">Wallet list</string>
    <string name="get_account">Get account</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>

    <string name="contract_code">Contract</string>
    <string name="table_name">"Table name :"</string>
    <string name="get_servants">Get servants</string>

    <string name="wallet_password">Wallet password</string>
    <string name="wallet_password_info">Save password to use in the future to unlock this wallet.\nWithout password keys will not be retrievable.</string>
    <string name="wallet_already_exists">"Wallet : '%1$s' already exist!"</string>

    <string name="invalid_connection_info">Invalid nodeos host info!</string>
    <string name="conn_failed">Could not connect!</string>

    <string name="contract_account">Contract account</string>
    <string name="contract_action">Contract Action :</string>

    <string name="scope">scope</string>

    <string name="permission_account_hint">Account for permission</string>
    <string name="permission_level_active">active</string>

    <string name="close">close</string>

    <string name="set_skip_signature">Set skipping signatures</string>
    <string name="skip_signature_info">Test functionality without dealing with keys.\nYour `nodeos` must have been started with --skip-sign option.</string>

    <string name="invalid_amount">Invalid amount !</string>

    <string name="timeout">Timeout !</string>
    <string name="network_err">Network error occurred !</string>
    <string name="error">Error</string>
    <string name="result">Result</string>
    <string name="failed">Failed!</string>

    <string name="should_unlock_to_import_key">You should unlock wallet to import key!</string>

    <string name="no_wallet_unlocked_or_selected">You have no wallet unlocked or selected!</string>
    <string name="key_empty_maybe_no_wallet_unlocked">Keys are empty. Maybe you have no wallet unlocked.</string>

    <string name="save_password">Save password.\nThen the password will be filled automatically to unlock for easy testing.</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="select_wallet_to_save_keys">Select wallet</string>
    <string name="no_keys">No keys!</string>

    <string name="delete_confirm">Delete confirmation</string>
    <string name="ru_sure_delete">"Are you sure to delete : '%s' ?"</string>
    <string name="deleted">Deleted</string>

    <string name="get_abi">Get abi</string>
    <string name="read_table_list">Read table list</string>
    <string name="form_input">Form input</string>
    <string name="err_empty_action_name">Empty action name</string>
    <string name="err_create_msg_input">Failed to create msg view</string>
    <string name="select_action_after_abi">You should select action after getting abi</string>
    <string name="select_action_after_tables">You should select action after getting table names</string>
    <string name="picker">Picker</string>
    <string name="action">"Action: "</string>
    <string name="action_loaded">action loaded !</string>
    <string name="table_loaded">table names loaded !</string>

    <string name="console_output">Console output:</string>
    <string name="token_contract">token contract</string>
    <string name="memo">memo</string>
    <string name="get">get</string>
    <string name="currency">currency</string>
    <string name="currency_symbol">currency symbol</string>
    <string name="get_balance">get balance</string>
    <string name="get_stats">get stats</string>

    <string name="table_key">key to index</string>
    <string name="lower_bound">lower bound</string>
    <string name="upper_bound">upper bound</string>
    <string name="limit">limit</string>

    <string name="stake_net">EOS delegated for net</string>
    <string name="stake_cpu">EOS delegated for CPU</string>
    <string name="buy_ram_eos">amount of EOS to buy ram for new account</string>

    <string name="core_symbol">Core asset symbol</string>
    <string name="get_actions">Get actions</string>
    <string name="position">Position</string>
    <string name="offset">Offset</string>

    <string name="symbol_name">symbol name</string>
    <string name="decimal">decimal</string>

    <string name="cannot_del_wallet_unlocked">You cannot delete wallet unlocked!</string>
    <string name="index">index: </string>
    <string name="index_type">index type: </string>
    <string name="encode_type">encode type: </string>

    <!--
    <string-array name="key_type_array">
        <item>i64</item>
        <item>i128</item>
        <item>i64</item>
        <item>i64</item>
        <item>i64</item>
        <item>i64</item>
        <item>i64</item>
    </string-array>

    <string name="dec">dec</string>
    <string name="hex">hex</string>
    -->
</resources>
