<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.mithrilcoin.eoscommander.ui.wallet.WalletFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:text="@string/command"/>

    <TextView
        android:id="@+id/btn_create_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_play_circle_outline"
        android:drawableTint="@color/colorMithril"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/create_wallet_default"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_play_circle_outline"
        android:drawableTint="@color/colorMithril"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/create_wallet"/>

    <TextView
        android:id="@+id/btn_view_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_play_circle_outline"
        android:drawableTint="@color/colorMithril"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/view_keys_unlocked_wallet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:text="@string/wallet_list"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_wallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_wallet"/>


</LinearLayout>
