<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.plactal.eoscommander.ui.account.AccountMainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorGray"
        android:text="@string/command"/>

    <io.plactal.eoscommander.ui.widget.TintVtDrTextView
        android:id="@+id/btn_command_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:vectorRight="@drawable/ic_play_circle_outline"
        app:vectorTint="@color/colorPlactal"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/create_account"/>

    <io.plactal.eoscommander.ui.widget.TintVtDrTextView
        android:id="@+id/btn_get_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:vectorRight="@drawable/ic_play_circle_outline"
        app:vectorTint="@color/colorPlactal"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/get_account"/>

    <io.plactal.eoscommander.ui.widget.TintVtDrTextView
        android:id="@+id/btn_get_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:vectorRight="@drawable/ic_play_circle_outline"
        app:vectorTint="@color/colorPlactal"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/get_actions"/>

    <io.plactal.eoscommander.ui.widget.TintVtDrTextView
        android:id="@+id/btn_get_servants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:vectorRight="@drawable/ic_play_circle_outline"
        app:vectorTint="@color/colorPlactal"
        android:background="@drawable/round_box_btn"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/get_servants"/>

</LinearLayout>
