<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="io.plactal.eoscommander.ui.transfer.TransferFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <io.plactal.eoscommander.ui.widget.TextInputAutoCompleteTextView
            android:id="@+id/et_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:digits=".12345abcdefghijklmnopqrstuvwxyz"
            android:padding="16dp"
            android:nextFocusDown="@+id/et_to"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:hint="@string/from"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <io.plactal.eoscommander.ui.widget.TextInputAutoCompleteTextView
            android:id="@+id/et_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:digits=".12345abcdefghijklmnopqrstuvwxyz"
            android:padding="16dp"
            android:nextFocusDown="@+id/et_amount"
            android:singleLine="true"
            android:hint="@string/to"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="number"
            android:nextFocusDown="@+id/et_memo"
            android:singleLine="true"
            android:hint="@string/amount"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="text"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="actionSend"
            android:hint="@string/memo"/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/btn_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:background="@drawable/round_box_btn_dark"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:text="@string/transfer"/>
</LinearLayout>
