<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_box_input">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_currency_cmd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:padding="8dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:spinnerMode="dropdown"/> <!-- android:background="@drawable/arrow_gray" unlock 된 지갑을 선택하는 스피너 -->
    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_token_contract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp">

        <io.plactal.eoscommander.ui.widget.TextInputAutoCompleteTextView
            style="@style/EosNameTextWithNext"
            android:id="@+id/et_token_contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:digits=".12345abcdefghijklmnopqrstuvwxyz"
            android:padding="16dp"
            android:nextFocusDown="@+id/et_account"
            android:hint="@string/token_contract"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <io.plactal.eoscommander.ui.widget.TextInputAutoCompleteTextView
            style="@style/EosNameTextWithNext"
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:digits=".12345abcdefghijklmnopqrstuvwxyz"
            android:padding="16dp"
            android:nextFocusDown="@+id/et_symbol"
            android:hint="@string/account"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:padding="16dp"
            android:singleLine="true"
            android:imeOptions="actionSend"
            android:hint="@string/currency_symbol"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:background="@drawable/round_box_btn_dark"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:text="@string/get"/>
</LinearLayout>