<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/create_wallet"/>

            <EditText
                android:id="@+id/et_wallet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColorHint="@color/colorLightGray"
                android:background="@drawable/round_box_input"
                android:padding="16dp"
                android:hint="@string/new_wallet_name"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/btn_create"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorMithril"
                    android:text="@string/create"/>

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_toStartOf="@id/btn_create"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/colorGray"
                    android:text="@android:string/cancel"/>

            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>